# agent-center

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  README.en.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  docker-build.yml
backend/: .env.example  Dockerfile  app.py  auth.py  config.py  db.py  pyproject.toml
backend/middleware/: auth.py
backend/routes/: __init__.py  auth.py  filesystem.py  inbox.py  plans.py  projects.py  status.py  tasks.py
backend/scheduler/: __init__.py  loop.py  worker.py
backend/services/: __init__.py  dependency_service.py  plan_service.py  project_service.py  runner_service.py  task_service.py  worktree_service.py
backend/tests/: conftest.py  test_subprocess_manager.py
backend/tests/test_api/: test_plans.py  test_tasks.py
backend/utils/: platform.py  process_registry.py  signals.py  subprocess_manager.py
docs/: ARCHITECTURE.md
frontend/: .env.example  Dockerfile  REFACTOR_COMPLETE.md  RESPONSIVE_OPTIMIZATION.md  i18n.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: AppLayout.tsx  RootLayoutContent.tsx  UnifiedViewContent.tsx  globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/auth/: AuthGuard.tsx
frontend/components/drawers/: ConversationHistory.tsx  PlanDrawer.tsx  TaskDrawer.tsx  TaskDrawerContent.tsx  index.ts
frontend/components/inbox/: InboxCard.tsx  InboxDropdown.tsx  index.ts
frontend/types/: inbox.ts  index.ts  plan.ts  project.ts  task.ts  worker.ts
(+59 files in other folders)
